# headset-battery-indicator

./: .gitattributes  .gitignore  CHANGELOG.md  MANIFEST.in  README.md  headset-battery-indicator.desktop  headset-battery-indicator.spec  headset_battery_indicator.py  headsetcontrol_tray.py  pyproject.toml  python-headset-battery-indicator.spec  run.py
.github/workflows/: build.yml
headset_battery_indicator/: __main__.py  i18n.py  icon_renderer.py  parsing.py  paths.py  preferences_dialog.py  settings.py  tray.py  worker.py
headset_battery_indicator/translations/: headset_battery_indicator_es.qm  headset_battery_indicator_es.ts
tests/: conftest.py  test_icon_renderer.py  test_parsing.py  test_settings.py  test_worker.py
