[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "headset-battery-indicator"
version = "1.4.0"
authors = [
    { name = "Ruflas", email = "ruflas@ruflas.dev" },
]
description = "A system tray icon to monitor headset battery levels, based on HeadsetControl."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
    "Environment :: X11 Applications :: Qt",
]
# Aquí le dices a pip qué dependencias instalar
dependencies = [
    "PySide6",
]

[project.scripts]

headset-battery-indicator = "headset_battery_indicator.__main__:main"

# --- NUEVA SECCIÓN PARA BRIEFCASE ---
[tool.briefcase]
project_name = "Headset Battery Indicator"
bundle = "dev.ruflas"
version = "1.4.0"
app_name = "headset_battery_indicator"

# Define la aplicación
[tool.briefcase.app.headset-battery-indicator]

formal_name = "Headset Battery Indicator"
description = "A system tray icon to monitor headset battery levels"

# El script principal
sources = ["headset_battery_indicator"]

# Dependencias de Python
requires = [
    "PySide6",
]

# --- Configuración del AppImage de Linux ---
[tool.briefcase.app.headset-battery-indicator.linux.appimage]
# Dependencias del sistema que Qt necesita (NOMBRES PARA YUM/FEDORA)
system_requires = [
    "pulseaudio-libs", 
    "mesa-libGL", 
    "glib2"
]

# SDK de Linux (Ubuntu 20.04)
manylinux = "manylinux_2_28"