[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["headset_battery_indicator*"]

[tool.setuptools.package-data]
headset_battery_indicator = ["translations/*.qm"]

[project]
name = "headset-battery-indicator"
version = "2.3.1"
authors = [
    { name = "Ruflas", email = "ruflas@ruflas.dev" },
]
description = "A system tray icon to monitor headset battery levels, based on HeadsetControl."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
    "Environment :: X11 Applications :: Qt",
]
dependencies = [
    "PySide6",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-qt"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]

headset-battery-indicator = "headset_battery_indicator.__main__:main"

[tool.briefcase]
project_name = "Headset Battery Indicator"
bundle = "dev.ruflas"
version = "2.3.1"
app_name = "headset_battery_indicator"

[tool.briefcase.app.headset-battery-indicator]

formal_name = "Headset Battery Indicator"
description = "A system tray icon to monitor headset battery levels"

sources = ["headset_battery_indicator", "icons"]
requires = [
    "PySide6",
]

[tool.briefcase.app.headset-battery-indicator.linux.appimage]
system_requires = [
    "pulseaudio-libs",
    "mesa-libGL",
    "glib2"
]
manylinux = "manylinux_2_28"
